--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div id="particles-js"></div>
     <!-- main content -->
     <div>
-        <div class="flex justify-center items-center w-full flex-col mt-5  ">
+        <div class="flex justify-center items-center w-full flex-col mt-10  ">
 
   <!-- Navbar -->
-<div class="flex justify-between items-center px-4 py-4 md:px-10 md:py-6 w-full">
+<div class="flex justify-between items-center px-4 py-4 md:px-10 md:py-6 w-full mt-[-70px]">
   <!-- Logo -->
   <div class="flex items-center space-x-3 cursor-pointer" onclick="window.location.reload()">
     <div class="w-[50px] md:w-[60px]">
@@ -29,7 +29,7 @@
   </div>
 
   <!-- Desktop Menu -->
-  <ul class="hidden md:flex gap-10 text-[#33e1f1] text-lg font-semibold uppercase">
+  <ul class="hidden md:flex gap-7 text-[#33e1f1] text-lg font-semibold uppercase">
     <li class="hover:text-white"><a href="#faq">FAQs</a></li>
     <li class="hover:text-white"><a href="https://shadowcore-ai.gitbook.io/shadowcore-ai-docs">Docs</a></li>
     <li>
@@ -47,6 +47,8 @@
     </svg>
   </div>
 </div>
+
+
 
 <!-- Sidebar (Mobile Menu) -->
 <div id="sidebar" class="hidden fixed top-0 left-0 z-50 w-full h-screen bg-black/90 backdrop-blur-md flex-col p-5 transition-all duration-300">
