--- a/index.html
+++ b/index.html
@@ -92,38 +92,38 @@
             </div>
 
 
-            <div class=" gap-4 md:gap-8 mt-10  md:mt-5" id="main">
-                <div class="bg-black/40 flex py-3 mb-10 flex-col items-center">
-                    <div class="justify-center items-center text-4xl text-white text-center  ">
-                      <div class="flex flex-wrap gap-2 items-center justify-center">
-                        <h1 class="text-white text-5xl lg:text-7xl font-bold">Build</h1>
-                        <h1 class="text-[#33e1f1] text-5xl lg:text-7xl font-bold">AI Agents</h1>
-            </div>
+           <section class="bg-black/40 py-10 px-4 flex flex-col items-center text-center">
+    
+    <!-- Headline -->
+    <div class="flex flex-wrap gap-2 justify-center items-center">
+      <h1 class="text-white text-3xl sm:text-5xl lg:text-7xl font-bold">Build</h1>
+      <h1 class="text-[#33e1f1] text-3xl sm:text-5xl lg:text-7xl font-bold">AI Agents</h1>
+    </div>
 
-                        <h2 class="text-white  text-[55px]  md:text-7xl font-bold">with <span class="uppercase">
-                                ShadowCore AI</span></h2>
-                    </div>
-                    <div class="mt-20 md:mt-10 w-full md:w-[85%] text-center font-bold">
-                       <h1 class="text-white text-lg md:text-[20px]">
-  Empowering <span class="text-[#33e1f1]">Multichain AI Agents</span> with privacy and scalability
-</h1>
+    <!-- Subheadline -->
+    <h2 class="text-white text-2xl sm:text-4xl md:text-5xl font-bold mt-4">
+      with <span class="uppercase">ShadowCore AI</span>
+    </h2>
 
-                    </div>
-                    <div
-                        class="mt-70 text-2xl md:text-4xl p-2 py-1.5 md:py-4 text-white bg-black shadow-lg  transition-all duration-300 md:p-4">
-                       <button class="bg-[#00f6ff] text-black font-semibold text-lg px-6 py-2 rounded-full flex items-center gap-2 hover-glow transition duration-300 ease-in-out">
+    <!-- Tagline -->
+    <p class="mt-10 text-base sm:text-lg md:text-xl font-bold w-full max-w-3xl">
+      Empowering <span class="text-[#33e1f1]">Multichain AI Agents</span> with privacy and scalability
+    </p>
+
+    <!-- Image (alien logo) -->
+    <img src="/logo-nobg.png" alt="ShadowCore AI Logo" class="w-32 sm:w-40 md:w-52 lg:w-64 mt-8" />
+
+    <!-- Button -->
+    <div class="mt-10">
+              <button class="bg-[#00f6ff] text-black font-semibold text-lg px-6 py-2 rounded-full flex items-center gap-2 hover-glow transition duration-300 ease-in-out">
   Get Started
   <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3" />
   </svg>
 </button>
+    </div>
 
-
-
-
-                    </div>
-                </div>
-            </div>
+  </section>
 
         </div>
    <div class="flex flex-col gap-8 justify-center text-center">
