--- a/index.html
+++ b/index.html
@@ -197,27 +197,35 @@
         
 
         <!-- sec 2 -->
-         <div class="cards-container">
+     <div class="cards-container">
   <div class="card">
-    <div class="icon">📦</div>
+    <div class="icon">
+      <img src="/draganddropbuilder[1].svg" alt="Drag & Drop Icon" />
+    </div>
     <h3>Drag & Drop Builder</h3>
     <p>Intuitive visual interface for creating complex AI workflows without any coding knowledge.</p>
     <a href="#">Learn More →</a>
   </div>
+
   <div class="card">
-    <div class="icon">✨</div>
+    <div class="icon">
+      <img src="/smarttemplate[1].svg" alt="Smart Templates Icon" />
+    </div>
     <h3>Smart Templates</h3>
     <p>Pre-built templates for common use cases to get you started in minutes, not hours.</p>
     <a href="#">Browse Templates →</a>
   </div>
+
   <div class="card">
-    <div class="icon">💻</div>
+    <div class="icon">
+      <img src="/autocode[1].svg" alt="Auto-Generated Code Icon" />
+    </div>
     <h3>Auto-Generated Code</h3>
     <p>Export clean, production-ready code whenever you need full control over your agents.</p>
     <a href="#">View Examples →</a>
   </div>
-
 </div>
+
 <div class="w-full     md:w-[90%] mt-10 mx-auto">
 <img src="/1920px800.svg" alt="AI Agent Banner">
 </div>
